# airflow_db

./: .env  Dockerfile  README.md  exemplo_decorator.py  minha_etl.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: api_to_postgres.py  dag_exemplo00.py  dag_exemplo01.py  dag_exemplo02.py  exemplo_orc.py  exemplo_orc2.py  main.py
include/: controller.py  db.py
