[tool.poetry]
name = "aiflow-duckdb"
version = "0.1.0"
description = "projeto envolvendo trabalho e funcionalidades com o airlfow"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
loguru = "^0.7.2"
pytest = "^8.3.3"
requests = "^2.32.3"
pydantic = "^2.10.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
